--- a/NumpyBasics.ipynb
+++ b/NumpyBasics.ipynb
@@ -585,6 +585,158 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Array comparison\n",
+    "\n",
+    "Numpy arrays also support comparison operations like ==, !=, > etc. The result is an array of booleans."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr1 = np.array([[1, 2, 3], [3, 4, 5]])\n",
+    "arr2 = np.array([[2, 2, 3], [1, 2, 5]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[False,  True,  True],\n",
+       "       [False, False,  True]])"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr1 == arr2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True, False, False],\n",
+       "       [ True,  True, False]])"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr1 != arr2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Array indexing and slicing\n",
+    "Numpy extends Python's list indexing notation using [] to multiple dimensions in an intuitive fashion. You can provide a comma-separated list of indices or ranges to select a specific element or a subarray (also called a slice) from a Numpy array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.array([\n",
+    "    [[1, 2, 3, 4], \n",
+    "     [5, 6, 7, 8]], \n",
+    "    \n",
+    "    [[9, 10, 11, 12], \n",
+    "     [13, 14, 15, 16]], \n",
+    "    \n",
+    "    [[17, 18, 19, 20],   \n",
+    "     [21, 22, 23, 24]]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Single element\n",
+    "arr[1, 1, 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 9, 10]],\n",
+       "\n",
+       "       [[17, 18]]])"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Subarray using ranges\n",
+    "arr[1:, 0:1, :2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 9, 10, 11, 12],\n",
+       "       [13, 14, 15, 16]])"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Using fewer indices\n",
+    "arr[1]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 56,
    "metadata": {},
