--- a/Pandas.ipynb
+++ b/Pandas.ipynb
@@ -2,18 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import os\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "%matplotlib inline"
+    "import pandas as pd"
    ]
   },
   {
